feat(i18next): add language keys

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -1,5 +1,12 @@
 {
+	"bigTurn": "Big turn",
 	"cancel": "Cancel",
+	"chooseClass": "Choose class",
 	"help": "Help",
-	"rule": "Rules"
+	"links": "Useful links",
+	"party": "Party",
+	"profile": "Profile",
+	"rule": "Rules",
+	"smallTurn": "Small turn",
+	"welcome": "Welcome"
 }
