--- a/src/languages/vi-VN/common.json
+++ b/src/languages/vi-VN/common.json
@@ -1,5 +1,12 @@
 {
+	"bigTurn": "Lượt chính",
 	"cancel": "Hủy",
+	"chooseClass": "Chọn thiên chức",
 	"help": "Trợ giúp",
-	"rule": "Luật"
+	"links": "Useful links",
+	"party": "Tổ đội",
+	"profile": "Hồ sơ",
+	"rule": "Luật",
+	"smallTurn": "Lượt phụ",
+	"welcome": "Chào mừng"
 }
