feat: language for selectMenu placeholder

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -7,6 +7,7 @@
 	"party": "Party",
 	"profile": "Profile",
 	"rule": "Rules",
+	"selectMenuPlaceholder": "Make a selection",
 	"smallTurn": "Small turn",
 	"welcome": "Welcome"
 }
