--- a/src/languages/vi-VN/common.json
+++ b/src/languages/vi-VN/common.json
@@ -7,6 +7,7 @@
 	"party": "Tổ đội",
 	"profile": "Hồ sơ",
 	"rule": "Luật",
+	"selectMenuPlaceholder": "Lựa chọn",
 	"smallTurn": "Lượt phụ",
 	"welcome": "Chào mừng"
 }
