feat(i18next): placeholder translation

--- a/src/languages/id-ID/common.json
+++ b/src/languages/id-ID/common.json
@@ -7,7 +7,7 @@
 	"party": "tim",
 	"profile": "Profil",
 	"rule": "Peraturan",
-	"selectMenuPlaceholder": "",
+	"selectMenuPlaceholder": "Tentukan Pilihan",
 	"smallTurn": "Small turn",
 	"welcome": "Selamat datang"
 }
