feat: chooseclass command

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -1,15 +1,23 @@
 {
+	"assassin": "Assassin",
+	"baseStats": "Base Stats",
 	"bigTurn": "Big turn",
 	"cancel": "Cancel",
 	"chooseClass": "Choose class",
+	"fighter": "Fighter",
+	"healer": "Healer",
 	"help": "Help",
 	"links": "Useful links",
+	"mage": "Mage",
 	"no": "No",
 	"party": "Party",
 	"profile": "Profile",
+	"ranger": "Ranger",
 	"rule": "Rules",
 	"selectMenuPlaceholder": "Make a selection",
+	"skills": "Skills",
 	"smallTurn": "Small turn",
+	"tanker": "Tanker",
 	"timeout": "Time out",
 	"welcome": "Welcome",
 	"yes": "Yes"
