--- a/src/languages/id-ID/common.json
+++ b/src/languages/id-ID/common.json
@@ -1,15 +1,23 @@
 {
+	"assassin": "",
+	"baseStats": "",
 	"bigTurn": "Giliran utama",
 	"cancel": "Membatalkan",
 	"chooseClass": "Pilih pekerjaan",
+	"fighter": "",
+	"healer": "",
 	"help": "Bantuan",
 	"links": "Useful links",
+	"mage": "",
 	"no": "Tidak",
 	"party": "tim",
 	"profile": "Profil",
+	"ranger": "",
 	"rule": "Peraturan",
 	"selectMenuPlaceholder": "Tentukan Pilihan",
+	"skills": "",
 	"smallTurn": "Small turn",
+	"tanker": "",
 	"timeout": "Waktu telah habis",
 	"welcome": "Selamat datang",
 	"yes": "Ya"
