--- a/src/languages/en-US/glossary.json
+++ b/src/languages/en-US/glossary.json
@@ -1,18 +1,162 @@
 {
-	"WHA": "World Hunters Association",
 	"SLS": "Solo Leveling Simulator",
+	"WHA": "World Hunters Association",
 	"currencies": {
-		"gold_one": "gold",
-		"gold_other": "golds",
 		"goldWithCount_one": "{{count}} $t(gold_one)",
 		"goldWithCount_other": "{{count}} $t(gold_other)",
-		"manaCrystal_one": "mana crystal",
-		"manaCrystal_other": "mana crystals",
+		"gold_one": "Gold",
+		"gold_other": "Golds",
+		"magicCoreWithCount_one": "{{count}} $t(magiccore_one)",
+		"magicCoreWithCount_other": "{{count}} $t(magiccore_other)",
+		"magicCore_one": "Magic Core",
+		"magicCore_other": "Magic Cores",
 		"manaCrystalWithCount_one": "{{count}} $t(manacrystal_one)",
 		"manaCrystalWithCount_other": "{{count}} $t(manacrystal_other)",
-		"magicCore_one": "magic core",
-		"magicCore_other": "magic cores",
-		"magicCoreWithCount_one": "{{count}} $t(magiccore_one)",
-		"magicCoreWithCount_other": "{{count}} $t(magiccore_other)"
+		"manaCrystal_one": "Mana Crystal",
+		"manaCrystal_other": "Mana Crystals"
+	},
+	"effects": {
+		"Bless": "Bless",
+		"Grievous Wounds": "Grievous Wounds"
+	},
+	"skills": {
+		"Arrow rain": {
+			"description": "Summon rain of arrows that deal damage to enemies from far away.",
+			"name": "Arrow rain"
+		},
+		"Barrier": {
+			"description": "Protects your allies with a powerful magic barrier. The barrier effects is depends on how \"tank\" the Tanker is.",
+			"name": "Barrier"
+		},
+		"Bloodlust": {
+			"description": "The enemy felt your immense desire to kill, making them in a state of fear - cannot use skills for 1 - 2 turns if they have less $t(glossary:stats:str) than you.",
+			"name": "Bloodlust"
+		},
+		"Bone Crunch": {
+			"description": "Razan bite the enemy. If the enemy HP is below 50%, they will be stunned for 1 - 2 turn.",
+			"name": "Bone Crunch"
+		},
+		"Buff": {
+			"description": "If use on \"$t(glossary:effects.Bless)\" target, it will increase the next damage of them. Otherwise, it will decrease the next damage of them.",
+			"name": "Buff"
+		},
+		"Camouflage": {
+			"description": "A spell to hide the Healer's presence. Become invisible for 2 - 4 turns",
+			"name": "Camouflage"
+		},
+		"Chomp": {
+			"description": "Raikan chomp on the enemy. There's a chance to slow the target down for 4 - 5 turns. $t(common:healer)'s $t(glossary:skills.Heal.name) can remove this effect.",
+			"name": "Chomp"
+		},
+		"Dagger Throw": {
+			"description": "Throw a sharp dagger towards the enemy's throat.",
+			"name": "Dagger Throw"
+		},
+		"Double punch": {
+			"description": "Punch the enemy twice.",
+			"name": "Double punch"
+		},
+		"Evade": {
+			"description": "Enhance visual and trying to dodge enemy's attack. Dodge chance depends on your $t(glossary:stats.agi) and $t(glossary:stats.def)/$t(glossary:stats.mr).",
+			"name": "Evade"
+		},
+		"Evolve": {
+			"description": "Normal mob can evolve to a boss. They will evolve if they survive for 4 turns (alive turns + killed players (1 turn/kill)).",
+			"name": "Evolve"
+		},
+		"Flame Spear": {
+			"description": "Create spears of fire and launch them at enemies.",
+			"name": "Flame Spear"
+		},
+		"Heal": {
+			"description": "If the $t(glossary:skills.Judge.name)'s result is \"$t(common:bless)\" this skill will heal the target otherwise will deal damage to them.",
+			"name": "Heal"
+		},
+		"Immobile curse": {
+			"description": "Curse the targeted creature(s) and reduce their $t(glossary:stats.agi)",
+			"name": "Immobile curse"
+		},
+		"Judge": {
+			"description": "As a priest, you can ask for a judge from God to the target. The result will affect your skills.",
+			"name": "Judge"
+		},
+		"Leap": {
+			"description": "Goblin leap on the furthest enemy.",
+			"name": "Leap"
+		},
+		"Lunge": {
+			"description": "A powerful slash that aims for the enemy's head. Deal physical damage according to your $t(glossary:stats.str)",
+			"name": "Lunge"
+		},
+		"Magic Arrow": {
+			"description": "Summon a powerful arrow to shoot at the enemy. Deal magical damage according to your $t(glossary:stats.int).",
+			"name": "Magic Arrow"
+		},
+		"Multishoot": {
+			"description": "Shoot multiple arrows at the enemy on the same spot. Decreases their defense by 30% for 1 - 3 turns.",
+			"name": "Multishoot"
+		},
+		"Poison Fang": {
+			"description": "Rasaka launch their fangs to poison the target enemies for 2 - 3 turns. Targeted enemies suffering magic damage every turn.",
+			"name": "Poison Fang"
+		},
+		"Power Smash": {
+			"description": "Launch a heavy smash that breaks the enemy's bones.",
+			"name": "Power Smash"
+		},
+		"Punch": {
+			"description": "Throw a heavy punch to the enemy face.",
+			"name": "Punch"
+		},
+		"Scratch": {
+			"description": "Briga scratch the enemy. Inflict them with $t(glossary:effects.Grievous Wounds) for 1 - 2 turns.",
+			"name": "Scratch"
+		},
+		"Seismic Shove": {
+			"description": "Stone Golem knock the enemy forwards for 1 - 2 blocks.",
+			"name": "Seismic Shove"
+		},
+		"Shoot": {
+			"description": "Shoot enemy with your bow.",
+			"name": "Shoot"
+		},
+		"Slash": {
+			"description": "Slash the enemy",
+			"name": "Slash"
+		},
+		"Sprint": {
+			"description": "Apply the armor penetration effect for the next attack.",
+			"name": "Sprint"
+		},
+		"Stab": {
+			"description": "Stab the enemy.",
+			"name": "Stab"
+		},
+		"Taunt": {
+			"description": "Provoke the enemy to get their attention, they'll now target you for 3 turns",
+			"name": "Taunt"
+		},
+		"Thunderbolt": {
+			"description": "Another elemental skills use thunder to damage the enemy. Has a small chance to stun",
+			"name": "Thunderbolt"
+		},
+		"Vitals": {
+			"description": "Find the vitals of enemies. Your next attack will deal more damage with the amount of 20% target's max $t(glossary:stats.hp).",
+			"name": "Vitals"
+		},
+		"Water ball": {
+			"description": "Compress blocks of water and throw them at the enemies.",
+			"name": "Water ball"
+		}
+	},
+	"stats": {
+		"agi": "Agility",
+		"def": "Defense",
+		"hp": "HP",
+		"int": "Intelligence",
+		"mp": "MP",
+		"mr": "Magic Resistance",
+		"str": "Strength",
+		"vit": "Vitality"
 	}
 }
