--- a/src/languages/id-ID/glossary.json
+++ b/src/languages/id-ID/glossary.json
@@ -1,18 +1,162 @@
 {
-	"WHA": "Serikat Pemburu Dunia",
 	"SLS": "Solo Leveling Simulator",
+	"WHA": "Serikat Pemburu Dunia",
 	"currencies": {
-		"gold_one": "Emas",
-		"gold_other": "Emas",
 		"goldWithCount_one": "{{count}} $t(gold_one)",
 		"goldWithCount_other": "{{count}} $t(gold_other)",
-		"manaCrystal_one": "kristal mana",
-		"manaCrystal_other": "kristal mana",
-		"manaCrystalWithCount_one": "{{count}} $t(manacrystal_one)",
-		"manaCrystalWithCount_other": "{{count}} $t(manacrystal_other)",
+		"gold_one": "Emas",
+		"gold_other": "Emas",
+		"magicCoreWithCount_one": "{{count}} $t(magiccore_one)",
+		"magicCoreWithCount_other": "{{count}} $t(magiccore_other)",
 		"magicCore_one": "Inti Magis",
 		"magicCore_other": "Inti Magis",
-		"magicCoreWithCount_one": "{{count}} $t(magiccore_one)",
-		"magicCoreWithCount_other": "{{count}} $t(magiccore_other)"
+		"manaCrystalWithCount_one": "{{count}} $t(manacrystal_one)",
+		"manaCrystalWithCount_other": "{{count}} $t(manacrystal_other)",
+		"manaCrystal_one": "kristal mana",
+		"manaCrystal_other": "kristal mana"
+	},
+	"effects": {
+		"Bless": "",
+		"Grievous Wounds": ""
+	},
+	"skills": {
+		"Arrow rain": {
+			"description": "",
+			"name": ""
+		},
+		"Barrier": {
+			"description": "",
+			"name": ""
+		},
+		"Bloodlust": {
+			"description": "",
+			"name": ""
+		},
+		"Bone Crunch": {
+			"description": "",
+			"name": ""
+		},
+		"Buff": {
+			"description": "",
+			"name": ""
+		},
+		"Camouflage": {
+			"description": "",
+			"name": ""
+		},
+		"Chomp": {
+			"description": "",
+			"name": ""
+		},
+		"Dagger Throw": {
+			"description": "",
+			"name": ""
+		},
+		"Double punch": {
+			"description": "",
+			"name": ""
+		},
+		"Evade": {
+			"description": "",
+			"name": ""
+		},
+		"Evolve": {
+			"description": "",
+			"name": ""
+		},
+		"Flame Spear": {
+			"description": "",
+			"name": ""
+		},
+		"Heal": {
+			"description": "",
+			"name": ""
+		},
+		"Immobile curse": {
+			"description": "",
+			"name": ""
+		},
+		"Judge": {
+			"description": "",
+			"name": ""
+		},
+		"Leap": {
+			"description": "",
+			"name": ""
+		},
+		"Lunge": {
+			"description": "",
+			"name": ""
+		},
+		"Magic Arrow": {
+			"description": "",
+			"name": ""
+		},
+		"Multishoot": {
+			"description": "",
+			"name": ""
+		},
+		"Poison Fang": {
+			"description": "",
+			"name": ""
+		},
+		"Power Smash": {
+			"description": "",
+			"name": ""
+		},
+		"Punch": {
+			"description": "",
+			"name": ""
+		},
+		"Scratch": {
+			"description": "",
+			"name": ""
+		},
+		"Seismic Shove": {
+			"description": "",
+			"name": ""
+		},
+		"Shoot": {
+			"description": "",
+			"name": ""
+		},
+		"Slash": {
+			"description": "",
+			"name": ""
+		},
+		"Sprint": {
+			"description": "",
+			"name": ""
+		},
+		"Stab": {
+			"description": "",
+			"name": ""
+		},
+		"Taunt": {
+			"description": "",
+			"name": ""
+		},
+		"Thunderbolt": {
+			"description": "",
+			"name": ""
+		},
+		"Vitals": {
+			"description": "",
+			"name": ""
+		},
+		"Water ball": {
+			"description": "",
+			"name": ""
+		}
+	},
+	"stats": {
+		"agi": "",
+		"def": "",
+		"hp": "",
+		"int": "",
+		"mp": "",
+		"mr": "",
+		"str": "",
+		"vit": ""
 	}
 }
