feat: help command

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -1,24 +1,55 @@
 {
+	"aliases": "Aliases",
+	"armor": "Armor",
 	"assassin": "Assassin",
-	"baseStats": "Base Stats",
+	"baseStats": "Stats",
 	"bigTurn": "Big turn",
 	"cancel": "Cancel",
 	"chooseClass": "Choose class",
+	"class": "Class",
+	"descriptions": {
+		"term": "The things you need help"
+	},
+	"drink": "Drink",
+	"drop": "Drops",
+	"examples": "Examples",
 	"fighter": "Fighter",
+	"gloves": "Gloves",
+	"heal": "Heal",
 	"healer": "Healer",
+	"helmet": "Helmet",
 	"help": "Help",
+	"levelDepends": {
+		"amount": "Amount",
+		"cooldown": "Cooldown",
+		"cost": "Mana Cost",
+		"exp": "Exp",
+		"range": "Range",
+		"size": "Size",
+		"turns": "Duration"
+	},
 	"links": "Useful links",
 	"mage": "Mage",
+	"necklace": "Necklace",
 	"no": "No",
 	"party": "Party",
 	"profile": "Profile",
 	"ranger": "Ranger",
+	"rank": "Rank",
+	"ring": "Ring",
 	"rule": "Rules",
 	"selectMenuPlaceholder": "Make a selection",
+	"sellValue": "Sell value",
+	"shoes": "Shoes",
 	"skills": "Skills",
 	"smallTurn": "Small turn",
+	"species": "Species",
 	"tanker": "Tanker",
+	"term": "Terms",
 	"timeout": "Time out",
+	"type": "Type",
+	"usage": "Usage",
+	"weapon": "Weapon",
 	"welcome": "Welcome",
 	"yes": "Yes"
 }
