--- a/src/languages/id-ID/validation.json
+++ b/src/languages/id-ID/validation.json
@@ -18,11 +18,70 @@
 		},
 		"twice": ""
 	},
+	"help": {
+		"defaultEmbed": {
+			"footer": "",
+			"moreInfo": "",
+			"tutorial": ""
+		},
+		"desccriptions": {
+			"commands": {
+				"ADD": "",
+				"BLACKJACK": "",
+				"BLACKSMITH": "",
+				"BUY": "",
+				"CHOP": "",
+				"CODES": "",
+				"COINFLIP": "",
+				"CONFIG": "",
+				"COOLDOWN": "",
+				"CRAFT": "",
+				"DAILY": "",
+				"DICE": "",
+				"DONATOR": "",
+				"DUEL": "",
+				"EQUIP": "",
+				"GATE": "",
+				"GIVE": "",
+				"GUIDE": "",
+				"GUILD": "",
+				"INFO": "",
+				"INVENTORY": "",
+				"INVITE": "",
+				"LOTTERY": "",
+				"MINE": "",
+				"MONEY": "",
+				"OPEN": "",
+				"PARTY": "",
+				"PING": "",
+				"PROFILE": "",
+				"PROGRESS": "",
+				"QUEST": "",
+				"RECOVER": "",
+				"REDEEM": "",
+				"REFERRAL": "",
+				"SELL": "",
+				"SHOP": "",
+				"SLOTS": "",
+				"STATS": "",
+				"THREECARDS": "",
+				"TITLE": "",
+				"TOP": "",
+				"TRADE": "",
+				"UNEQUIP": "",
+				"USE": "",
+				"VOTE": "",
+				"WEEKLY": ""
+			}
+		},
+		"footer": ""
+	},
 	"language": {
 		"decline": "Oke, saya tidak mengubah bahasa Anda.",
 		"disclaimer": "Bahasa ini **TIDAK** diterjemahkan oleh **$t(glossary:WHA)'s Staff**. **Apakah Anda yakin akan mengubah bahasa?**.\nJika Anda memiliki terjemahan yang lebih baik, silakan hubungi kami!",
 		"success": "Bahasa Anda telah diubah ke Indonesia."
 	},
+	"links": "",
 	"reset": {
 		"decline": "*Ahh, baiklah...*",
 		"error": "Sepertinya ada yang salah, harap ulangi lagi!",
